# SkillSyncRAG

./: .gitignore  PracticeFile.ipynb  folder_structure.py  main.py  play.ipynb  pyproject.toml  streamfinal copy.py  streamfinal1.py  streamfinal11.py  streamfinal12.py  streamfinal2.py  streamfinal3.py
notebooks/: PracticeFile.ipynb  pipeline.ipynb  playground.ipynb  rag.ipynb
notebooks/db/chroma_db_with_metadata/: chroma.sqlite3
notebooks/saved_data/: call.txt  storage.json
notebooks/saved_data/initial_tests/: response1.json  response2.json  response3.json
prototype/: pipeline.py  rag.py  ui_streamlit.py
src/: __init__.py
src/utils/: helper.py  logger.py
